Blender 2.78a Link/Append Crash #50013

Closed
opened 2016-11-13 10:03:58 +01:00 by Thomas Wybenga · 4 comments

System Information
Windows 7 32-bit Home Basic, nVidia Geforce 8400 GS

Blender Version
Broken: (2.78a)
Worked: (2.78)

Blender crashes/closes to my desktop whenever I try to Link/Append a .blend file. I am trying to bring in a character rig and I have tried different rigs but I crash with all of them. However sometimes when I append it will work but as soon as I touch the bones and try to move them it will crash.

Exact steps for others to reproduce the error

  • Open Blender and go to append.
  • Open up a .blend file and select all the objects.
  • Click on append and it should crash to your desktop.

File
BlackPlasmaRig.blend

**System Information** Windows 7 32-bit Home Basic, nVidia Geforce 8400 GS **Blender Version** Broken: (2.78a) Worked: (2.78) **Blender crashes/closes to my desktop whenever I try to Link/Append a .blend file. I am trying to bring in a character rig and I have tried different rigs but I crash with all of them. However sometimes when I append it will work but as soon as I touch the bones and try to move them it will crash.** **Exact steps for others to reproduce the error** - Open Blender and go to append. - Open up a .blend file and select all the objects. - Click on append and it should crash to your desktop. **File** [BlackPlasmaRig.blend](https://archive.blender.org/developer/F398281/BlackPlasmaRig.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Flavoxt

Added subscriber: @Flavoxt
Bastien Montagne self-assigned this 2016-11-13 15:36:40 +01:00

This issue was referenced by 1b1d6ce131

This issue was referenced by 1b1d6ce131c93b8a770c873460dce429796849a3

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#50013
No description provided.